--- a/mn_juego/templates/candidatos_con_porcentajes.html
+++ b/mn_juego/templates/candidatos_con_porcentajes.html
@@ -8,13 +8,13 @@
             </div>
 
             <!--Candidato Card -->
-            <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3 candidatos">
+            <div class="col-10 col-sm-6 col-md-4 col-lg-3 col-xl-3 candidatos">
                 <div class="card-candidato" data-toggle="modal" data-target="#perfil-candidato-1">
                     <p>Partido Político</p>
                     <h5>Nombre Apellido</h5>
                     <div class="compromisos-adheridos">
-                        <p class="pink">Compromiso por la participación</p>
-                        <p class="blue">Compromiso GEP</p>
+                        <img src="../static/imagenes/estrella-rosa.svg" alt="estrella rosa">
+                        <img src="../static/imagenes/estrella-azul.svg" alt="estrella azul">
                     </div>
                 </div>
 
@@ -58,13 +58,13 @@
             </div>
 
             <!--Candidato Card -->
-            <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3 candidatos">
+            <div class="col-10 col-sm-6 col-md-4 col-lg-3 col-xl-3 candidatos">
                 <div class="card-candidato" data-toggle="modal" data-target="#perfil-candidato-2">
                     <p>Partido Político</p>
                     <h5>Nombre Apellido</h5>
                     <div class="compromisos-adheridos">
-                        <p class="pink">Compromiso por la participación</p>
-                        <p class="blue">Compromiso GEP</p>
+                        <img src="../static/imagenes/estrella-rosa.svg" alt="estrella rosa">
+                        <img src="../static/imagenes/estrella-azul.svg" alt="estrella azul">
                     </div>
                 </div>
 
@@ -108,13 +108,13 @@
             </div>
 
             <!--Candidato Card -->
-            <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3 candidatos">
+            <div class="col-10 col-sm-6 col-md-4 col-lg-3 col-xl-3 candidatos">
                 <div class="card-candidato" data-toggle="modal" data-target="#perfil-candidato-3">
                     <p>Partido Político</p>
                     <h5>Nombre Apellido</h5>
                     <div class="compromisos-adheridos">
-                        <p class="pink">Compromiso por la participación</p>
-                        <p class="blue">Compromiso GEP</p>
+                        <img src="../static/imagenes/estrella-rosa.svg" alt="estrella rosa">
+                        <img src="../static/imagenes/estrella-azul.svg" alt="estrella azul">
                     </div>
                 </div>
 
@@ -158,13 +158,13 @@
             </div>
 
             <!--Candidato Card -->
-            <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3 candidatos">
+            <div class="col-10 col-sm-6 col-md-4 col-lg-3 col-xl-3 candidatos">
                 <div class="card-candidato" data-toggle="modal" data-target="#perfil-candidato-4">
                     <p>Partido Político</p>
                     <h5>Nombre Apellido</h5>
                     <div class="compromisos-adheridos">
-                        <p class="pink">Compromiso por la participación</p>
-                        <p class="blue">Compromiso GEP</p>
+                        <img src="../static/imagenes/estrella-rosa.svg" alt="estrella rosa">
+                        <img src="../static/imagenes/estrella-azul.svg" alt="estrella azul">
                     </div>
                 </div>
 
@@ -208,13 +208,13 @@
             </div>
 
             <!--Candidato Card -->
-            <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3 candidatos">
+            <div class="col-10 col-sm-6 col-md-4 col-lg-3 col-xl-3 candidatos">
                 <div class="card-candidato" data-toggle="modal" data-target="#perfil-candidato-5">
                     <p>Partido Político</p>
                     <h5>Nombre Apellido</h5>
                     <div class="compromisos-adheridos">
-                        <p class="pink">Compromiso por la participación</p>
-                        <p class="blue">Compromiso GEP</p>
+                        <img src="../static/imagenes/estrella-rosa.svg" alt="estrella rosa">
+                        <img src="../static/imagenes/estrella-azul.svg" alt="estrella azul">
                     </div>
                 </div>
 
@@ -258,13 +258,13 @@
             </div>
 
             <!--Candidato Card -->
-            <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3 candidatos">
+            <div class="col-10 col-sm-6 col-md-4 col-lg-3 col-xl-3 candidatos">
                 <div class="card-candidato" data-toggle="modal" data-target="#perfil-candidato-6">
                     <p>Partido Político</p>
                     <h5>Nombre Apellido</h5>
                     <div class="compromisos-adheridos">
-                        <p class="pink">Compromiso por la participación</p>
-                        <p class="blue">Compromiso GEP</p>
+                        <img src="../static/imagenes/estrella-rosa.svg" alt="estrella rosa">
+                        <img src="../static/imagenes/estrella-azul.svg" alt="estrella azul">
                     </div>
                 </div>
 
@@ -308,13 +308,13 @@
             </div>
 
             <!--Candidato Card -->
-            <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3 candidatos">
+            <div class="col-10 col-sm-6 col-md-4 col-lg-3 col-xl-3 candidatos">
                 <div class="card-candidato" data-toggle="modal" data-target="#perfil-candidato-7">
                     <p>Partido Político</p>
                     <h5>Nombre Apellido</h5>
                     <div class="compromisos-adheridos">
-                        <p class="pink">Compromiso por la participación</p>
-                        <p class="blue">Compromiso GEP</p>
+                        <img src="../static/imagenes/estrella-rosa.svg" alt="estrella rosa">
+                        <img src="../static/imagenes/estrella-azul.svg" alt="estrella azul">
                     </div>
                 </div>
 
@@ -358,13 +358,13 @@
             </div>
 
             <!--Candidato Card -->
-            <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3 candidatos">
+            <div class="col-10 col-sm-6 col-md-4 col-lg-3 col-xl-3 candidatos">
                 <div class="card-candidato" data-toggle="modal" data-target="#perfil-candidato-8">
                     <p>Partido Político</p>
                     <h5>Nombre Apellido</h5>
                     <div class="compromisos-adheridos">
-                        <p class="pink">Compromiso por la participación</p>
-                        <p class="blue">Compromiso GEP</p>
+                        <img src="../static/imagenes/estrella-rosa.svg" alt="estrella rosa">
+                        <img src="../static/imagenes/estrella-azul.svg" alt="estrella azul">
                     </div>
                 </div>
 
@@ -427,20 +427,20 @@
 
 <section class="candidatos-pueblos-contenedor container-fluid">
     <div class="container">
-        <div class="row justify-content-md-center">
+        <div class="row justify-content-center">
             <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
                 <h2>Estas son las candidaturas de <br><span>Pueblos Originarios</span> en la Región Metropolitana</h2>
             </div>
 
             <!--Candidato Card -->
-            <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3 candidatos-pueblos">
+            <div class="col-10 col-sm-6 col-md-4 col-lg-3 col-xl-3 candidatos-pueblos">
                 <div class="card-candidato" data-toggle="modal" data-target="#perfil-candidato-pueblo-1">
                     <p>Partido Político</p>
                     <h5>Nombre Apellido</h5>
                     <p class="pueblo-origen">Pueblo Originario</p>
                     <div class="compromisos-adheridos">
-                        <p class="pink">Compromiso por la participación</p>
-                        <p class="blue">Compromiso GEP</p>
+                        <img src="../static/imagenes/estrella-rosa.svg" alt="estrella rosa">
+                        <img src="../static/imagenes/estrella-azul.svg" alt="estrella azul">
                     </div>
                 </div>
 
@@ -487,15 +487,15 @@
             </div>
 
             <!--Candidato Card -->
-            <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3 candidatos-pueblos">
+            <div class="col-10 col-sm-6 col-md-4 col-lg-3 col-xl-3 candidatos-pueblos">
 
                 <div class="card-candidato" data-toggle="modal" data-target="#perfil-candidato-pueblo-2">
                     <p>Partido Político</p>
                     <h5>Nombre Apellido</h5>
                     <p class="pueblo-origen">Pueblo Originario</p>
                     <div class="compromisos-adheridos">
-                        <p class="pink">Compromiso por la participación</p>
-                        <p class="blue">Compromiso GEP</p>
+                        <img src="../static/imagenes/estrella-rosa.svg" alt="estrella rosa">
+                        <img src="../static/imagenes/estrella-azul.svg" alt="estrella azul">
                     </div>
                 </div>
 
