--- a/mn_juego/templates/componentes/footer.html
+++ b/mn_juego/templates/componentes/footer.html
@@ -2,33 +2,33 @@
     <div class="container">
         <div class="row alinear">
 
-            <div class="col-4 col-sm-4 col-md-3 col-lg-3 col-xl-3 logo">
+            <div class="col-12 col-sm-12 col-md-3 col-lg-3 col-xl-3 logo">
                 <img src="../../static/imagenes/logo-antp.png" alt="personas" class="pueblo-originario">
             </div>
 
-            <div class="col-8 col-sm-8 col-md-6 col-lg-6 col-xl-6">
+            <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
                 <nav class="nav-footer">
                     <ul>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Quiénes Somos</a>
+                            <a class="nav-link" href="https://ahoranostocaparticipar.cl/pages/quienes-somos">Quiénes Somos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Preguntas Frecuentes</a>
+                            <a class="nav-link" href="https://ahoranostocaparticipar.cl/pages/faq">Preguntas Frecuentes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Términos y condiciones</a>
+                            <a class="nav-link" href="https://ahoranostocaparticipar.cl/pages/accessibility">Términos y condiciones</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Organizaciones involucradas</a>
+                            <a class="nav-link" href="https://ahoranostocaparticipar.cl/pages/patrocinantes">Organizaciones involucradas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contacto</a>
+                            <a class="nav-link" href="https://ahoranostocaparticipar.cl/pages/contacto">Contacto</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Transparencia</a>
+                            <a class="nav-link" href="https://ahoranostocaparticipar.cl/pages/transparencia">Transparencia</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Descargar ficheros de datos abiertos</a>
+                            <a class="nav-link" href="https://ahoranostocaparticipar.cl/open-data/download">Descargar ficheros de datos abiertos</a>
                         </li>
                     </ul>
                 </nav>
@@ -51,16 +51,20 @@
 <div class="container-fluid footer-creditos">
     <div class="container">
         <div class="row">
-            <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 alinear">
-                <img src="../../static/imagenes/logo-softwarelibre.png" alt="iconos software libre">
+            <div class="col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3 alinear">
+                <a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank"><img src="../../static/imagenes/logo-softwarelibre.png" alt="iconos software libre"></a>
                 <p>Web creada con <a href="#" class="enlace">software libre</a>.</p>
             </div>
-            <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
-                <p>Con el soporte de</p>
-                <img src="../../static/imagenes/alabs-logo.svg" alt="logo alabs">
+            <div class="col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3 fci-creditos">
+                <p>Desarrollado por</p>
+                <a href="https://ciudadaniai.org/" target="_blank"><img src="../../static/imagenes/logo-fci.svg" alt="logo fci"></a>
             </div>
-            <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
-                <img src="../../static/imagenes/decidim-logo.svg" alt="logo decidim">
+            <div class="col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3">
+                <p>Con el soporte de</p>
+                <a href="https://www.alabs.org/" target="_blank"><img src="../../static/imagenes/alabs-logo.svg" alt="logo alabs"></a>
+            </div>
+            <div class="col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3">
+                <a href="https://decidim.org/" target="_blank"> <img src="../../static/imagenes/decidim-logo.svg" alt="logo decidim"></a>
             </div>
         </div>
     </div>
