--- a/mn_juego/templates/componentes/header.html
+++ b/mn_juego/templates/componentes/header.html
@@ -3,17 +3,17 @@
 <header>
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
         <div class="nav-form container my-2">
-            <a class="navbar-brand" href="#"><img src="{% static 'imagenes/logo-antp.png' %}" alt="My image"></a>
+            <a class="navbar-brand" href="https://ahoranostocaparticipar.cl/"><img src="{% static 'imagenes/logo-antp.png' %}" alt="My image"></a>
             <ul class="navbar-nav">
                 <form class="form-inline">
                     <input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Search">
                     <!--<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>-->
                 </form>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Registrate</a>
+                    <a class="nav-link" href="https://ahoranostocaparticipar.cl/users/sign_up">Registrate</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Entrar</a>
+                    <a class="nav-link" href="https://ahoranostocaparticipar.cl/users/sign_in">Entrar</a>
                 </li>
             </ul>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -23,19 +23,19 @@
         <div class="collapse navbar-collapse v-desktop" id="navbarNavDropdown">
             <ul class="navbar-nav container">
                 <li class="nav-item">
-                    <a class="nav-link active" href="#">Inicio</a>
+                    <a class="nav-link active" href="https://ahoranostocaparticipar.cl/">Inicio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">¿Cómo participar?</a>
+                    <a class="nav-link" href="https://ahoranostocaparticipar.cl/processes">¿Cómo participar?</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Territorios</a>
+                    <a class="nav-link" href="https://ahoranostocaparticipar.cl/assemblies">Territorios</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Noticias</a>
+                    <a class="nav-link" href="https://ahoranostocaparticipar.cl/processes/noticias/f/6/">Noticias</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Sobre el proyecto</a>
+                    <a class="nav-link" href="https://ahoranostocaparticipar.cl/pages">Sobre el proyecto</a>
                 </li>
             </ul>
         </div>
