--- a/mn_juego/templates/resultado.html
+++ b/mn_juego/templates/resultado.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %} {% block content %}
 
 <div class="banner-mapa-distrito">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d53174.04800860228!2d-70.59680875596365!3d-33.595495467408!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662d652752a03c3%3A0x8f5de46ed2a22e92!2sPuente%20Alto%2C%20Regi%C3%B3n%20Metropolitana!5e0!3m2!1ses!2scl!4v1617581462137!5m2!1ses!2scl" width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+   <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d53174.04800860228!2d-70.59680875596365!3d-33.595495467408!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662d652752a03c3%3A0x8f5de46ed2a22e92!2sPuente%20Alto%2C%20Regi%C3%B3n%20Metropolitana!5e0!3m2!1ses!2scl!4v1617581462137!5m2!1ses!2scl" width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy"></iframe>-->
     <div class="info">
         <h1 class="distrito">Puente Alto, {{distrito}}</h1>
         <p class="region">Región Metropolitana</p>
@@ -18,20 +18,20 @@
             <h2><b>Compromisos #ParticipamosTodxs: </b><br>Por una participación ciudadana inclusiva</h2>
             <p>Porque en este proceso constituyente <b>#ParticipamosTodxs</b>, les pedimos a las candidaturas que adhieran a los siguientes compromisos, para impulsar una participación ciudadana inclusiva durante el trabajo de la Convención Constitucional.</p>
             <div class="compromiso pink">
-                <h3>Compromiso por la Participación:</h3>
-                <p>Compromiso por la inclusión de grupos con mayor vulneración de derechos. Trabajados desde Manual <a href="https://drive.google.com/file/d/1draruC0R7CZJLc6CWE0DZ_mcRul9As36/view" target="_blank">“Miradas para la inclusión”</a>.</p>
-                <a class="boton-antp" href="#">Revisa el compromiso</a>
+                <h3>Compromiso por la inclusión de grupos con mayor vulneración de derechos.</h3>
+                <p>Trabajados desde Manual <a href="https://drive.google.com/file/d/1draruC0R7CZJLc6CWE0DZ_mcRul9As36/view" target="_blank">“Miradas para la inclusión”</a>.</p>
+                <a class="boton-antp" href="https://drive.google.com/file/d/1VryC-gYx0q00pHqRgSUwJv_pf0cy-teW/view" target="_blank">Revisa el compromiso</a>
             </div>
             <div class="compromiso blue">
-                <h3>Compromiso GEP:</h3>
-                <p>Compromiso por la participación en el proceso constituyente. Impulsado desde <a href="https://www.redparalaparticipacion.cl/" target="_blank">la Red para la Participación.</a></p>
-                <a class="boton-antp" href="#">Revisa el compromiso</a>
+                <h3>Compromiso por la participación en el proceso constituyente.</h3>
+                <p>Impulsado desde <a href="https://www.redparalaparticipacion.cl/" target="_blank">la Red para la Participación.</a></p>
+                <a class="boton-antp" href="https://drive.google.com/file/d/1tqaSC44PvhniTe7GDv7Sg-SmXwhaFzIj/view" target="_blank">Revisa el compromiso</a>
             </div>
         </div>
 
         <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 datos-porcentajes">
             <div class="item-porcentaje">
-                <h4>Participación electoral en el<span>Plebiscito 25-O</span></h4>
+                <h4>Participación electoral de la comuna en el<span>Plebiscito 25-O</span></h4>
                 <p class="porcentaje">42.78%</p>
             </div>
             <!-- <div class="item-porcentaje">
@@ -39,7 +39,7 @@
                 <p class="porcentaje">42.78%</p>
             </div>-->
             <div class="item-porcentaje boton-locales-votacion">
-                <a class="boton-antp" href="#"><img src="../static/imagenes/map-icono-white.svg" alt="mapa-icono" class="icono-mapa" width="25px;">Local de votación</a>
+                <a class="boton-antp" href="#"><img src="../static/imagenes/map-icono-white.svg" alt="mapa-icono" class="icono-mapa" width="25px;">Busca tu local de votación</a>
             </div>
         </div>
     </div>
