Utilizando las comunas

--- a/mn_juego/templates/componentes/buscador_comunas.html
+++ b/mn_juego/templates/componentes/buscador_comunas.html
@@ -8,7 +8,7 @@
     function onSelectItem(item) {
 
       let slug = item.value;
-      $(location).attr('href', 'c/'+slug)
+      $(location).attr('href', 'comuna/'+slug)
     }
     $( document ).ready(function() {
         $('#myAutocomplete').autocomplete({
