fix imágenes index

--- a/mn_juego/templates/index.html
+++ b/mn_juego/templates/index.html
@@ -15,12 +15,12 @@
         <!--<span>Participamos todos</span><br>-->¿Qué candidaturas se comprometen por el <span>derecho a la participación ciudadana inclusiva?</span></h2>
     <div class="boton-acla">
         <p>Conocelas Aquí</p>
-        <a data-scroll href="#busqueda-candidatos"><img src="../static/imagenes/icono-arrow.svg" alt="icono scroll"></a>
+        <a data-scroll href="#busqueda-candidatos"><img src="{% static 'imagenes/icono-arrow.svg' %}" alt="icono scroll"></a>
     </div>
 </div>
 
 <div class="textura-post-menu-home" id="busqueda-candidatos">
-    <img src="../static/imagenes/trazo-postmenu-decoracion.svg" alt="textura">
+    <img src="{% static 'imagenes/trazo-postmenu-decoracion.svg' %}" alt="textura">
 </div>
 
 <div class="container-fluid busqueda-comuna">
